@@ -76,6 +76,18 @@ AgentState::GetUniformNumber() const
 }
 
 void
+AgentState::SetRobotType(int type)
+{
+    mRobotType = type;
+}
+
+int
+AgentState::GetRobotType() const
+{
+    return mRobotType;
+}
+
+void
 AgentState::SetID(const std::string& id, TPerceptType pt)
 {
     std::istringstream iss(id);
@@ -238,7 +250,7 @@ AgentState::OnUnlink()
       GetLog()->Error() << "ERROR: (AgentState::OnUnlink) could not get game state\n";
       return;
     }
-    
+
     game_state->ReturnUniform(GetTeamIndex(), GetUniformNumber());
 }
 
